# agent-annotator

./: .gitignore  Cargo.toml  README.md  Rocket.example.toml  Rocket.toml  package-lock.json  package.json
annotator-backend/: diesel.toml
annotator-backend/migrations/2022-05-11-180647_add_projects/: down.sql
annotator-backend/migrations/2022-06-13-211824_store_images_in_db/: up.sql
annotator-backend/migrations/2022-10-26-001000_add_status/: down.sql
annotator-backend/public/annotator/: asset-manifest.json  index.html
annotator-backend/src/: experiments.rs  schema.rs  schema_enums.rs
annotator-backend/templates/: leaderboard.html.tera  preview.html.tera  projects-list.html.tera  signup.html.tera
annotator-interface/: package.json
annotator-interface/public/: index.html
annotator-interface/src/: App.css  App.js  agents.json  bootstrap.scss
annotator-interface/src/components/: Labeler.js  Sidebar.js  Timeline.css  VideoLabeler.js  util.js
migrations/2022-05-04-021354_create_experiments/: down.sql  up.sql
migrations/2022-05-04-021354_create_users/: up.sql
migrations/2022-05-10-204830_create_experiments/: up.sql
migrations/2022-05-11-180647_add_projects/: up.sql
migrations/2022-05-20-192150_add_experiments/: down.sql  up.sql
migrations/2022-10-13-002255_add_desired_fps/: down.sql  up.sql
migrations/2022-10-26-001000_add_status/: up.sql
public/annotator/: asset-manifest.json  index.html
public/annotator/static/css/: main.0ab15794.chunk.css  main.644623d2.chunk.css  main.644623d2.chunk.css.map  main.bd77ccb9.chunk.css.map
public/annotator/static/js/: 2.64a69a5a.chunk.js.map  2.aa742e5e.chunk.js  2.aa742e5e.chunk.js.LICENSE.txt  2.aa742e5e.chunk.js.map  3.5a346ecf.chunk.js  3.5a346ecf.chunk.js.map  3.7bd141dc.chunk.js  3.b8d425a5.chunk.js.map  main.0b8b5193.chunk.js  main.0b8b5193.chunk.js.map  main.16335fa1.chunk.js  main.2299051d.chunk.js  main.2299051d.chunk.js.map  main.2e3b3c61.chunk.js  main.2e3b3c61.chunk.js.map  main.3606c664.chunk.js  main.3606c664.chunk.js.map  main.509186be.chunk.js.map  main.5223b522.chunk.js  main.5223b522.chunk.js.map  main.53467a54.chunk.js  main.5f869eab.chunk.js  main.5f869eab.chunk.js.map  main.61d625d9.chunk.js  main.71806bd7.chunk.js  main.71806bd7.chunk.js.map  main.89ff60cb.chunk.js.map  main.93dbe2e6.chunk.js  (+14 more)
src/: App.js  agents.json  api.rs  demean_agents.js  experiments.rs  main.rs  projects.rs  reducer.js  schema.rs  schema_enums.rs  video.rs  video_cache.rs
src/components/: Labeler.js  Sidebar.css  Sidebar.js  Timeline.css  Timeline.js  Toolbar.js  VideoLabeler.css  VideoLabeler.js  labels.js  util.js
templates/: base.html.tera  experiment-list.html.tera  index.html.tera  login.html.tera  new-project.html.tera  project-detail-row.html.tera  project-detail.html.tera  projects-list.html.tera  signup.html.tera
(+27 files in other folders)
