[package]
name = "video-annotator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features=["tera"] }
serde = "1.0.137"
thiserror = "1.0.31"
diesel = { version = "1.4.4", features = ["postgres"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]